# alfred-slack-2-markdown-rust

./: .gitignore  Cargo.toml  README.md  info.plist  license
src/: main.rs
